Still some code refinings